add credentials to rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 REGION_NAME=
 BUCKET_NAME=
+
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USERNAME=
+RABBITMQ_PASSWORD=
